--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "coverage": "jest --coverage",
     "lint:ts": "tslint --fix -c tslint.json 'src/**/*.ts' 'tests/**/*.test.ts'",
     "postversion": "git push && git push --tags",
-    "start": "node lib/index.js",
+    "start": "node -e 'require(\"./lib/index.js\").start()'",
     "test": "yarn lint:ts && yarn coverage",
     "unit": "npx jest",
     "version": "yarn build && git add ."
