--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
   ],
   "author": "Tony Brobston",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "async-mqtt": "^2.4.2",
+    "chokidar": "^3.3.1",
+    "read-last-lines": "^1.7.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
@@ -43,12 +47,9 @@
     "@types/node": "^12.7.4",
     "async": "^3.1.0",
     "chance": "^1.0.18",
-    "chokidar": "^3.3.1",
     "commitlint": "^8.2.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
-    "mqtt": "^3.0.0",
-    "read-last-lines": "^1.7.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
