--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "coverage": "jest --coverage",
     "lint:ts": "tslint --fix -c tslint.json 'src/**/*.ts' 'tests/**/*.test.ts'",
     "postversion": "git push && git push --tags",
-    "start": "node -e 'require(\"./lib/index.js\").start()'",
+    "start": "node -e 'require(\"./lib/index.js\").start({logFilePath: process.env.LOG_FILE_PATH, logFileRegex: process.env.LOG_FILE_REGEX, mqttUsername: process.env.MQTT_USERNAME, mqttPassword: process.env.MQTT_PASSWORD, mqttHost: process.env.MQTT_HOST, mqttPort: process.env.MQTT_PORT})'",
     "test": "yarn lint:ts && yarn coverage",
     "unit": "npx jest",
     "version": "yarn build && git add ."
