--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "@commitlint/config-conventional": "^8.2.0",
     "@types/chance": "^1.0.6",
     "@types/jest": "^24.0.18",
+    "@types/mosca": "^2.8.2",
     "@types/node": "^12.7.4",
     "chance": "^1.0.18",
     "commitlint": "^8.2.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
+    "mosca": "^2.8.3",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
