--- a/package.json
+++ b/package.json
@@ -37,24 +37,24 @@
   "dependencies": {
     "async-mqtt": "^2.4.2",
     "chokidar": "^3.3.1",
-    "read-last-lines": "^1.7.1"
+    "read-last-lines": "^1.7.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@types/chance": "^1.0.6",
-    "@types/jest": "^24.0.18",
+    "@commitlint/cli": "^8.3.4",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@types/chance": "^1.0.8",
+    "@types/jest": "^24.9.1",
     "@types/mosca": "^2.8.2",
-    "@types/node": "^12.7.4",
-    "chance": "^1.0.18",
-    "commitlint": "^8.2.0",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
+    "@types/node": "^13.5.0",
+    "chance": "^1.1.4",
+    "commitlint": "^8.3.4",
+    "husky": "^4.2.1",
+    "jest": "^25.0.0",
     "mosca": "^2.8.3",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.3.0",
+    "ts-jest": "^25.0.0",
+    "ts-node": "^8.6.2",
     "tslint": "^5.19.0",
-    "typescript": "3.3.1"
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
