--- a/package.json
+++ b/package.json
@@ -46,18 +46,18 @@
     "@types/chance": "^1.0.6",
     "@types/jest": "^24.0.18",
     "@types/mosca": "^2.8.2",
-    "@types/node": "^12.7.4",
+    "@types/node": "^13.5.0",
     "chance": "^1.0.18",
     "commitlint": "^8.2.0",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
+    "husky": "^4.2.1",
+    "jest": "^25.1.0",
     "mosca": "^2.8.3",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^25.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
     "typedoc": "^0.16.9",
     "typedoc-plugin-markdown": "^2.2.16",
-    "typescript": "3.3.1"
+    "typescript": "^3.6.2"
   },
   "husky": {
     "hooks": {
