docs: fix project description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "logs-to-mqtt-publisher",
   "version": "1.0.4",
-  "description": "A server-side JavaScript tool that converts log statements to topics and publishes them to a mqtt broker.",
+  "description": "A server-side JavaScript tool that converts log statements to topics/messages and publishes them to a mqtt broker.",
   "main": "./lib/index.js",
   "repository": {
     "type": "git",
