--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logs-to-mqtt-publisher",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A server-side JavaScript tool that converts log statements to topics/messages and publishes them to a mqtt broker.",
   "main": "./lib/index.js",
   "repository": {
@@ -35,9 +35,11 @@
   "author": "Tony Brobston",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^13.5.0",
     "async-mqtt": "^2.4.2",
     "chokidar": "^3.3.1",
-    "read-last-lines": "^1.7.1"
+    "read-last-lines": "^1.7.1",
+    "typescript": "^3.6.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
@@ -45,7 +47,6 @@
     "@types/chance": "^1.0.6",
     "@types/jest": "^24.0.18",
     "@types/mosca": "^2.8.2",
-    "@types/node": "^13.5.0",
     "chance": "^1.0.18",
     "commitlint": "^8.2.0",
     "husky": "^4.2.1",
@@ -55,8 +56,7 @@
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
     "typedoc": "^0.16.9",
-    "typedoc-plugin-markdown": "^2.2.16",
-    "typescript": "^3.6.2"
+    "typedoc-plugin-markdown": "^2.2.16"
   },
   "husky": {
     "hooks": {
