--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^13.5.0",
     "async-mqtt": "^2.4.2",
     "chokidar": "^3.3.1",
+    "jsonfile": "^5.0.0",
     "read-last-lines": "^1.7.1",
     "typescript": "^3.6.2"
   },
